[gd_scene load_steps=5 format=3 uid="uid://bfktfmboc1gvu"]

[ext_resource type="Script" path="res://scripts/UI/gameover_screen.gd" id="1_dtlkw"]
[ext_resource type="Texture2D" uid="uid://dya5nfol062wx" path="res://flappy-bird-assets-1.1.0/sprites/UI/gameover.png" id="1_ttmfh"]
[ext_resource type="FontFile" uid="uid://ivch7iw160v2" path="res://flappy-bird-assets-1.1.0/flappy-font.ttf" id="3_n7qs1"]
[ext_resource type="AudioStream" uid="uid://cdo2ybt8b23f" path="res://flappy-bird-assets-1.1.0/audio/swoosh.ogg" id="5_1qwcf"]

[node name="GameOver" type="Control" node_paths=PackedStringArray("HighScoreNode", "CurrentScoreNode")]
z_index = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
size_flags_horizontal = 4
script = ExtResource("1_dtlkw")
HighScoreNode = NodePath("VBoxContainer/board/HBoxContainer/MarginContainer2/Score/HighScore")
CurrentScoreNode = NodePath("VBoxContainer/board/HBoxContainer/MarginContainer2/Score/CurrentScore")
metadata/_edit_group_ = true

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_1qwcf")
volume_db = 5.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -91.0
offset_right = 96.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2

[node name="gameover" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_ttmfh")

[node name="board" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/board"]
texture_filter = 5
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/board/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="World" type="VBoxContainer" parent="VBoxContainer/board/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="CurrentWorld" type="Label" parent="VBoxContainer/board/HBoxContainer/MarginContainer/World"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_n7qs1")
theme_override_font_sizes/font_size = 14
text = "World"
horizontal_alignment = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/board/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Score" type="VBoxContainer" parent="VBoxContainer/board/HBoxContainer/MarginContainer2"]
texture_filter = 5
layout_mode = 2

[node name="HighScore" type="Label" parent="VBoxContainer/board/HBoxContainer/MarginContainer2/Score"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_n7qs1")
theme_override_font_sizes/font_size = 14
text = "High score

0
"
horizontal_alignment = 1

[node name="CurrentScore" type="Label" parent="VBoxContainer/board/HBoxContainer/MarginContainer2/Score"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_n7qs1")
theme_override_font_sizes/font_size = 14
text = "Score

0"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_n7qs1")
theme_override_font_sizes/font_size = 14
text = "Retry"

[connection signal="button_down" from="VBoxContainer/RetryButton" to="." method="_on_retry_button_button_down"]
